application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: application01
spec:
  type: NodePort
  selector:
    app: echoserver
  ports:
    - port: 8080
      targetPort: 8080
