application/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-echoserver
  namespace: application01
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: app.cluster.gijsvandulmen.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  tls:
  - hosts:
    - app.cluster.gijsvandulmen.dev
    secretName: app-cluster-gijsvandulmen-dev
